RESOLVED FIXED216261
REGRESSION(r266634): fast/animation/request-animation-frame-throttling-lowPowerMode.html is flaky
https://bugs.webkit.org/show_bug.cgi?id=216261
Summary REGRESSION(r266634): fast/animation/request-animation-frame-throttling-lowPow...
Sihui Liu
Reported 2020-09-07 21:15:13 PDT
...
Attachments
Patch (4.42 KB, patch)
2020-09-07 21:27 PDT, Sihui Liu
no flags
Patch (5.09 KB, patch)
2020-09-08 15:15 PDT, Sihui Liu
no flags
Sihui Liu
Comment 1 2020-09-07 21:27:24 PDT
Radar WebKit Bug Importer
Comment 2 2020-09-08 09:46:57 PDT
Darin Adler
Comment 3 2020-09-08 11:59:34 PDT
Comment on attachment 408209 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=408209&action=review > Source/WebKit/ChangeLog:9 > + Do not schedule rendering update if we don't need to handle activity state change callbacks, as we did not > + schedule activity state timer before r266634. This stops *just* short of saying why we should make this change. I understand that it restore the old behavior and we did not need to change it. But why is the old behavior correct/better? Any why does that help fix "flakiness". Those are left mysterious by this comment.
Sihui Liu
Comment 4 2020-09-08 15:15:52 PDT
Sihui Liu
Comment 5 2020-09-08 15:25:02 PDT
(In reply to Darin Adler from comment #3) > Comment on attachment 408209 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=408209&action=review > > > Source/WebKit/ChangeLog:9 > > + Do not schedule rendering update if we don't need to handle activity state change callbacks, as we did not > > + schedule activity state timer before r266634. > > This stops *just* short of saying why we should make this change. I > understand that it restore the old behavior and we did not need to change > it. But why is the old behavior correct/better? Any why does that help fix > "flakiness". Those are left mysterious by this comment. Updated ChangeLog after digging into it. Looks like there is actually nothing wrong about the current behavior, so we may also fix this by changing test expectation. Maybe Simon or Said can comment about this.
EWS
Comment 6 2020-09-10 10:40:35 PDT
Committed r266838: <https://trac.webkit.org/changeset/266838> All reviewed patches have been landed. Closing bug and clearing flags on attachment 408272 [details].
Note You need to log in before you can comment on or make changes to this bug.