REGRESSION(r266634): fast/animation/request-animation-frame-throttling-lowPowerMode.html is flaky https://bugs.webkit.org/show_bug.cgi?id=216261 <rdar://problem/68513429>

Reviewed by Tim Horton.

Source/WebKit:

r266634 makes a behavior change that when there is an activity state change, TiledCoreAnimationDrawingArea
schedules a rendering update. This breaks timed rendering update from ScriptedAnimationController in the
test. If rendering update happens before timer fires, the callback of ScriptedAnimationController will be
invoked earlier than expected, thus more callbacks executed in the same time frame.

To fix this, let's only schedule rendering update when we need to handle activity state change callbacks,
as before r266634, where we don't schedule activity state timer if there is no callback.

* WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:
(WebKit::TiledCoreAnimationDrawingArea::activityStateDidChange):

LayoutTests:

* fast/animation/request-animation-frame-throttling-lowPowerMode-expected.txt:
* fast/animation/request-animation-frame-throttling-lowPowerMode.html:


Canonical link: https://commits.webkit.org/229197@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266838 268f45cc-cd09-0410-ab3c-d52691b4dbfc